1 and part of 3 added

--- a/sheet06/sheet06.ipynb
+++ b/sheet06/sheet06.ipynb
@@ -281,7 +281,7 @@
     "solution": true
    },
    "source": [
-    ">Hough transform is a technique to detect shapes that can easily be represented in mathematical form (in that sense it is model-based). The idea being that with n parameters that describe the sought after shape, we can span an n-dimensional space of all possible combinations of parameters. For each point in out image we look for all shape configurations that would include that point.We then proceed to to increment the value of the corresponding bin in our n-dimensional space by one, which is why it's called the accumulator space. The maxima withing a given threshold of that space are the candidates for our shapes."
+    ">Hough transform is a technique to detect shapes that can easily be represented in mathematical form (in that sense it is model-based). The idea being that with n parameters that describe the sought after shape, we can span an n-dimensional space of all possible combinations of parameters. For each point in out image we look for all shape configurations that would include that point.We then proceed to to increment the value of the corresponding bin in our n-dimensional space by one, which is why it's called the accumulator space. The maxima within a given threshold of that space are the candidates for our shapes."
    ]
   },
   {
@@ -320,7 +320,7 @@
    },
    "source": [
     "> The linear Hough transform is the above technique applied to the shape of a line, which can be represented as y=mx+c or in parametric form, as ρ=xcosθ+ysinθ.  \n",
-    "There's only two parameters neccessary to describe a line(m and c/ρ and θ) , leading to a 2-dimensional accumulatos space. Each point in that space represents a combinations of those two parameters. In case of y=mx+c they describe slope and intercept of the line, in case of the parametric form the perpendicular distance from origin to the line, and the angle formed by this perpendicular line and horizontal axis.\n"
+    "There's only two parameters neccessary to describe a line(m and c/ρ and θ) , leading to a 2-dimensional accumulatos space. Each point in that space represents a combinations of those two parameters. In case of y=mx+c they describe slope and intercept of the line, in case of the parametric form the perpendicular distance from origin to the line, and the angle formed by this perpendicular line and horizontal axis."
    ]
   },
   {
@@ -750,7 +750,8 @@
     "solution": true
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "> In a two-dimensional space, a circle can be described by:( x − a )<sup>2</sup> + ( y − b )2<sup>2</sup> = r<sup>2</sup>  \n",
+    "Therefore we are left with 3 parameters (a,b and r) to find assignments for, meaning the accumulator space is 3-dimensional. Due to the curse of dimensionality that additional parameter leads to increased computation and storage cost. This can be somewhat remedied in cases where we're only looking for circles of certain radii, e.g. the below mentioned eye tracking."
    ]
   },
   {
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -786,17 +787,85 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 298 is out of bounds for axis 1 with size 298",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-91-d6b35aae961d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m \u001b[0mmy_out\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmy_hough_circ\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m360\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'b'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-91-d6b35aae961d>\u001b[0m in \u001b[0;36mmy_hough_circ\u001b[1;34m(img, radius, theta)\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;31m#in ab-space increment along circle of given radius with center x,y\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m         \u001b[0mcircle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mogrid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mradius\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0maccumulator\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcircle\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0maccumulator\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 298 is out of bounds for axis 1 with size 298"
+     ]
+    }
+   ],
    "source": [
     "from skimage.transform import hough_line\n",
     "from scipy import misc\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "from skimage import filters\n",
+    "%matplotlib inline\n",
+    "import math\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "# load the image\n",
     "img = plt.imread('images/xmas.png')\n",
     "\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "def my_hough_circ(img, radius, theta=360):\n",
+    "    \"\"\"\n",
+    "    Apply circualr Hough transform to the given image.\n",
+    "    \n",
+    "    Arguments:\n",
+    "        img: numpy.ndarray\n",
+    "            The binary image to transform\n",
+    "        radius: int\n",
+    "            The radius to consider.\n",
+    "        theta: int\n",
+    "            angle of circle\n",
+    "    Result:\n",
+    "        accumulator: numpy.ndarray\n",
+    "            The accumulator space.\n",
+    "    \"\"\"\n",
+    "    # indices of edge pixels found with sobel filter\n",
+    "    edge_idx = np.transpose(np.nonzero(filters.sobel(img)))\n",
+    "    \n",
+    "    \n",
+    "    # accumulator space\n",
+    "    accumulator = np.zeros(img.shape, dtype=np.uint64)\n",
+    "    \n",
+    "    for (x,y) in edge_idx:\n",
+    "        \n",
+    "        #in ab-space increment along circle of given radius with center x,y\n",
+    "        circle=np.ogrid[x-radius:x+radius+1,y-radius:y+radius+1]\n",
+    "        accumulator[circle] += 1\n",
+    "                 \n",
+    "    return accumulator\n",
+    "\n",
+    "    #maxima of the accumulator are the centres of circles with given radius\n",
+    "\n",
+    "\n",
+    "my_out = my_hough_circ(img,20,360)\n",
+    "plt.xlabel('a')\n",
+    "plt.ylabel('b')\n",
+    "plt.imshow(my_out)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x=a+R cos(theta)  \n",
+    "y=b+R sin(theta)\n",
+    "\n",
+    "a=x-R cos(theta)  \n",
+    "b=y-R sin(theta)"
    ]
   },
   {
